# lsif-ocaml

./: .gitignore  LICENSE  Makefile  README.md  data.lsif  dune  lsif-ocaml.opam
scripts/: dump.sh  dune  upload.sh
src/: dune  main.ml  main.ml.lsif.in
