opam-version: "2.0"
name:         "lsif-ocaml"
maintainer:   "rvantonder@gmail.com"
authors:      "Rijnard van Tonder"
homepage:     "https://github.com/rvantonder/lsif-ocaml"
bug-reports:  "https://github.com/rvantonder/lsif-ocaml/issues"
dev-repo:     "git+https://github.com/rvantonder/lsif-ocaml.git"
license:      "MIT"
build: [["dune" "build" "-p" name "-j" jobs "@install"]]
depends: [
  "core"
  "yojson"
  "ppx_deriving"
  "ppx_deriving_yojson"
]
synopsis:
  "Takes merlin LSIF data and emits it in LSIF format"
