(executables
 (modules main)
 (libraries core core_extended.base64 core.uuid ppx_deriving_yojson ppx_deriving_yojson.runtime) 
 (preprocess (pps ppx_deriving_yojson ppx_let ppx_deriving.show))
 (names main))

(alias
 (name DEFAULT)
 (deps main.exe))

(install
 (package lsif-ocaml)
 (section bin)
 (files (main.exe as lsif-ocaml)))
